--- a/Number Base Converter/Convert fractions/task-info.yaml
+++ b/Number Base Converter/Convert fractions/task-info.yaml
@@ -1025,5 +1025,9 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/13096#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: Tue, 01 Nov 2022 10:53:47 UTC
 record: -1
